@@ -17,6 +17,7 @@
 package org.apache.camel.component.language;
 
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 import org.apache.camel.ContextTestSupport;
 import org.apache.camel.builder.RouteBuilder;
@@ -38,7 +39,7 @@ public class LanguageRouteNoTransformTest extends ContextTestSupport {
         return new RouteBuilder() {
             @Override
             public void configure() throws Exception {
-                String script = URLEncoder.encode("Hello ${body}", "UTF-8");
+                String script = URLEncoder.encode("Hello ${body}", StandardCharsets.UTF_8);
                 from("direct:start").to("language:simple:" + script + "?transform=false").to("mock:result");
             }
         };
